# pysc2_converter_external

./: .gitignore  .gitmodules  README.md  makefile  pyproject.toml
docker/: Dockerfile  grpcio.dockerfile
scripts/: get_protoc.py
src/proto/: service.proto
src/pysc2_converter_external/: client.py  main.py
src/pysc2_converter_external/proto/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
